# socks5-configurator

./: Cargo.toml  Cross.toml  config.toml
.github/workflows/: rust.yml
src/: common.rs  lib.rs  main.rs  route.rs  socks5.rs
