[package]
name = "socks5-configurator"
version = "0.1.0"
authors = ["zrah <zrah@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
iprange = "0.6.4"
flit = "0.1.2"
tokio = {version = "1.8.1",features = ["full"]}
socks5-protocol = "0.3.4"
anyhow = "1"
log = "0.4"
ipnet = "2"
ureq = "2.1.1"
tokio-socks = "0.5.1"
serde = "1"
serde_derive = "1"
structopt = "0.3"
env_logger = "0.8.4"

[profile.release]
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = "fat"
codegen-units = 1
panic = "abort"
